--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -39,7 +38,8 @@
             android:layout_weight="1"
             android:padding="16dp"
             android:src="@drawable/ic_baseline_wb_sunny_24"
-            app:tint="@color/purple_dark" />
+            app:tint="@color/purple_dark"
+            />
 
     </LinearLayout>
 
@@ -64,7 +64,8 @@
         android:paddingHorizontal="15dp"
         android:text="@string/default_word"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        />
 
     <View
         android:layout_width="128dp"
@@ -73,6 +74,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:background="@color/black"
+        android:elevation="2dp"
         android:backgroundTint="@color/purple_primary" />
 
     <Button
